# discolyte

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  chatcommands.py  main.py  memes.py  pyproject.toml  setup.py
.github/workflows/: pythonapp.yml
acolyte/: .env.example  __init__.py  __main__.py  chatcommands.py  main.py  misc.py  scrape.py
acolyte/modules/: audio.py  chat.py  loader.py  nightcore.py  random.py  scrape.py
acolyte/util/: fs.py  http.py  magic.py  watchdog.py
src/: main.py  paulstretch.py  secret.example  utils.py
src/modules/: audio.py  chat.py  loader.py  scrape.py
